--- a/.gitattributes
+++ b/.gitattributes
@@ -35,4 +35,4 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
-*.lxo filter=lfs diff=lfs merge=lfs -textt
+*.lxo filter=lfs diff=lfs merge=lfs -text
